--- a/indexcards-ui/src/app/component/common/header/header.component.css
+++ b/indexcards-ui/src/app/component/common/header/header.component.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
 :host ::ng-deep .p-menubar {
   background-color: var(--deepPurple700);
+  font-family: 'Montserrat', sans-serif;
   color: var(--deepPurple50);
   border: none;
 }
