feat: added delete button to project

--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
@@ -11,6 +11,7 @@
         <div (click)="goToProject(project.id)" class="projectName">
           {{ project.name }}
         </div>
+        <i class="pi pi-trash trash-icon"></i>
       </div>
     </div>
   </div>
