--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.css
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.css
@@ -6,6 +6,9 @@
   font-size: 1.875em;
   border-radius: 10px;
   padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .projectName {
@@ -25,4 +28,15 @@
   font-size: 2.5em;
   display: flex;
   align-items: center;
+}
+
+.trash-icon {
+  color: var(--bad);
+  margin-right: 10px;
+  font-size: 1em;
+  transition: color 0.25s;
+}
+
+.trash-icon:hover {
+  color: var(--badDark);
 }
