--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
@@ -11,7 +11,9 @@
         <div (click)="goToProject(project.id)" class="projectName">
           {{ project.name }}
         </div>
-        <i class="pi pi-trash trash-icon" (click)="deleteProject(project.id)"></i>
+        <p-toast></p-toast>
+        <p-confirmPopup></p-confirmPopup>
+        <i class="pi pi-trash trash-icon" (click)="confirm($event, project.id)"></i>
       </div>
     </div>
   </div>
