--- a/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
+++ b/indexcards-ui/src/app/component/projects/all-projects/all-projects.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header-container">
     <h1 class="title">
-      Your Projects
+      {{ 'project.your_projects' | translate }}
     </h1>
     <i class="pi pi-plus header-icon" routerLink="createProject"></i>
   </div>
