--- a/indexcards-ui/src/app/component/projects/create-project/create-project.component.html
+++ b/indexcards-ui/src/app/component/projects/create-project/create-project.component.html
@@ -1,14 +1,14 @@
 <form [formGroup]="createProjectFormGroup" (ngSubmit)="createProject()">
   <div class="container">
     <h1 class="title">
-      Create a new Project
+      {{ 'project.create_project' | translate }}
     </h1>
     <div class="form-input form-group">
       <label for="name">
-        Project name
+        {{ 'project.project_name' | translate }}
       </label><br>
       <input pInputText formControlName="name" name="name" id="name" type="text"><br>
     </div>
-    <button pButton type="submit">Create Project</button>
+    <button pButton type="submit">{{ 'project.create_project_button' | translate }}</button>
   </div>
 </form>
