--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz-stat/indexcard-quiz-stat.component.html
@@ -1,11 +1,11 @@
 
 <div class="container">
-  <h1>Current Stats for {{ userProject?.projectResponse?.name }}</h1>
+  <h1>{{ 'indexcard.stat' | translate }} {{ userProject?.projectResponse?.name }}</h1>
   <div class="chart-container">
     <p-chart type="pie" [data]="data" [options]="chartOptions"></p-chart>
   </div>
   <div class="footer-container">
-    <p-button pTooltip="Go back to project" (click)="onClickToProject()">Back to Project</p-button>
-    <p-button pTooltip="Repeat" (click)="onClickQuizButton()">Spaced Repetition</p-button>
+    <p-button (click)="onClickToProject()">{{ 'indexcard.to_project' | translate }}</p-button>
+    <p-button (click)="onClickQuizButton()">{{ 'indexcard.spaced_repetition' | translate }}</p-button>
   </div>
 </div>
