--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -5,7 +5,7 @@
     </h1>
     <div class="header-icon-container">
       <p-button (click)="onClickQuizButton()">{{ 'indexcard.spaced_repetition' | translate }}</p-button>
-      <i class="pi pi-plus header-icon" pTooltip="Create a new index card" (click)="onClickCreateIndexcardButton()"></i>
+      <i class="pi pi-plus header-icon" pTooltip="{{ 'indexcard.create_tooltip' | translate }}" (click)="onClickCreateIndexcardButton()"></i>
     </div>
   </div>
   <div class="indexcard-container">
