--- a/indexcards-ui/src/app/component/projects/project/project.component.css
+++ b/indexcards-ui/src/app/component/projects/project/project.component.css
@@ -9,6 +9,12 @@
   grid-template-columns: repeat(2, 1fr);
 }
 
+@media (max-width: 480px) {
+  .indexcard-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .header-icon-container {
   display: flex;
   justify-content: space-evenly;
@@ -16,10 +22,14 @@
 
 .indexcard {
   background: var(--deepPurple300);
-  height: 100px;
   margin: 10px;
   padding: 5px;
   border-radius: 10px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-align: left;
 }
 
 .header-icon {
