--- a/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
+++ b/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
@@ -8,14 +8,14 @@
       <label for="question">
         {{ 'indexcard.question' | translate }}
       </label><br>
-      <textarea pInputTextarea formControlName="question" name="question" id="question" type="text"></textarea><br>
+      <p-editor formControlName="question" name="question" id="question" [style]="{'height':'320px'}"></p-editor>
     </div>
 
     <div class="form-input form-group">
       <label for="answer">
         {{ 'indexcard.answer' | translate }}
       </label><br>
-      <textarea pInputTextarea formControlName="answer" name="answer" id="answer" type="text"></textarea><br>
+      <p-editor formControlName="answer" name="answer" id="answer" [style]="{'height':'320px'}"></p-editor>
     </div>
 
     <button pButton type="submit">{{ 'indexcard.create' | translate }}</button>
