--- a/indexcards-ui/src/app/styles/theme.css
+++ b/indexcards-ui/src/app/styles/theme.css
@@ -924,6 +924,7 @@ p-dropdown.ng-dirty.ng-invalid > .p-dropdown {
   background: #ffffff;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
+  margin-top: 10px;
 }
 .p-editor-container .p-editor-toolbar.ql-snow {
   border: 1px solid #e0e0e0;
@@ -976,6 +977,8 @@ p-dropdown.ng-dirty.ng-invalid > .p-dropdown {
 .p-editor-container .p-editor-content {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+
+  margin-bottom: 10px;
 }
 .p-editor-container .p-editor-content.ql-snow {
   border: 1px solid #e0e0e0;
