--- a/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
+++ b/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
@@ -8,14 +8,30 @@
       <label for="question">
         {{ 'indexcard.question' | translate }}
       </label><br>
-      <p-editor formControlName="question" name="question" id="question" [style]="{'height':'320px'}"></p-editor>
+      <p-editor formControlName="question" name="question" id="question" [style]="{'height':'320px'}">
+        <ng-template pTemplate="header">
+          <span class="ql-format-group">
+            <button type="button" class="ql-bold" aria-label="Bold"></button>
+            <button type="button" class="ql-italic" aria-label="Italic"></button>
+            <button type="button" class="ql-underline" aria-label="Underline"></button>
+          </span>
+        </ng-template>
+      </p-editor>
     </div>
 
     <div class="form-input form-group">
       <label for="answer">
         {{ 'indexcard.answer' | translate }}
       </label><br>
-      <p-editor formControlName="answer" name="answer" id="answer" [style]="{'height':'320px'}"></p-editor>
+      <p-editor formControlName="answer" name="answer" id="answer" [style]="{'height':'320px'}">
+        <ng-template pTemplate="header">
+          <span class="ql-format-group">
+            <button type="button" class="ql-bold" aria-label="Bold"></button>
+            <button type="button" class="ql-italic" aria-label="Italic"></button>
+            <button type="button" class="ql-underline" aria-label="Underline"></button>
+          </span>
+        </ng-template>
+      </p-editor>
     </div>
 
     <button pButton type="submit">{{ 'indexcard.create' | translate }}</button>
