--- a/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
+++ b/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
@@ -14,6 +14,8 @@
             <button type="button" class="ql-bold" aria-label="Bold"></button>
             <button type="button" class="ql-italic" aria-label="Italic"></button>
             <button type="button" class="ql-underline" aria-label="Underline"></button>
+            <button type="button" class="ql-list" value="ordered" aria-label="Ordered List"></button>
+            <button type="button" class="ql-list" value="bullet" aria-label="Unordered List"></button>
           </span>
         </ng-template>
       </p-editor>
@@ -29,6 +31,8 @@
             <button type="button" class="ql-bold" aria-label="Bold"></button>
             <button type="button" class="ql-italic" aria-label="Italic"></button>
             <button type="button" class="ql-underline" aria-label="Underline"></button>
+            <button type="button" class="ql-list" value="ordered" aria-label="Ordered List"></button>
+            <button type="button" class="ql-list" value="bullet" aria-label="Unordered List"></button>
           </span>
         </ng-template>
       </p-editor>
