feat: long questions / answers scrollable in quiz

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.css
@@ -7,6 +7,11 @@
   margin-bottom: 20px;
 }
 
+.indexcard-text {
+  font-size: 1.5em;
+  text-align: left;
+}
+
 .indexcard {
   width: 50%;
   background-color: var(--deepPurple300);
