--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
@@ -1,13 +1,15 @@
 <div style="height: 60vh" class="container">
   <div class="indexcard-container">
     <div class="indexcard">
-      <h2><div [innerHTML]="getIndexCard()?.question" ></div></h2>
+      <p-scrollPanel [style]="{width: '100%', height: '40%'}">
+        <div class="indexcard-text" [innerHTML]="getIndexCard()?.question" ></div>
+      </p-scrollPanel>
       <button pButton class="show-answer-button" (click)="showAnswer = !showAnswer">
         {{ showAnswer ? ('indexcard.hide_answer' | translate) : 'indexcard.show_answer' | translate }}
       </button>
-      <div *ngIf="showAnswer">
-        <h2><div [innerHTML]="getIndexCard()?.answer" ></div></h2>
-      </div>
+      <p-scrollPanel *ngIf="showAnswer" [style]="{width: '100%', height: '40%'}">
+        <div class="indexcard-text" [innerHTML]="getIndexCard()?.answer" ></div>
+      </p-scrollPanel>
     </div>
     <div class="assessment-button-container">
       <app-assessment-button class="assessment-button" [assessment]="'BAD'" (click)="assessIndexCard('BAD')"></app-assessment-button >
