--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
@@ -4,9 +4,9 @@
       <p-scrollPanel [style]="{width: '100%', height: '40%'}">
         <div class="indexcard-text" [innerHTML]="getIndexCard()?.question" ></div>
       </p-scrollPanel>
-      <button pButton class="show-answer-button" (click)="showAnswer = !showAnswer">
+      <p-button (click)="showAnswer = !showAnswer">
         {{ showAnswer ? ('indexcard.hide_answer' | translate) : 'indexcard.show_answer' | translate }}
-      </button>
+      </p-button>
       <p-scrollPanel *ngIf="showAnswer" [style]="{width: '100%', height: '40%'}">
         <div class="indexcard-text" [innerHTML]="getIndexCard()?.answer" ></div>
       </p-scrollPanel>
