--- a/indexcards-ui/src/app/styles/theme.css
+++ b/indexcards-ui/src/app/styles/theme.css
@@ -921,41 +921,41 @@ p-dropdown.ng-dirty.ng-invalid > .p-dropdown {
 }
 
 .p-editor-container .p-editor-toolbar {
-  background: #ffffff;
+  background: var(--darkgrey);
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   margin-top: 10px;
 }
 .p-editor-container .p-editor-toolbar.ql-snow {
-  border: 1px solid #e0e0e0;
+  border: 1px solid var(--deepPurple500);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-stroke {
-  stroke: rgba(0, 0, 0, 0.6);
+  stroke: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-fill {
-  fill: rgba(0, 0, 0, 0.6);
+  fill: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker .ql-picker-label {
   border: 0 none;
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker .ql-picker-label:hover {
-  color: rgba(0, 0, 0, 0.87);
+  color: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker .ql-picker-label:hover .ql-stroke {
-  stroke: rgba(0, 0, 0, 0.87);
+  stroke: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker .ql-picker-label:hover .ql-fill {
-  fill: rgba(0, 0, 0, 0.87);
+  fill: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
-  color: rgba(0, 0, 0, 0.87);
+  color: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-stroke {
-  stroke: rgba(0, 0, 0, 0.87);
+  stroke: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-fill {
-  fill: rgba(0, 0, 0, 0.87);
+  fill: rgba(255, 255, 255);
 }
 .p-editor-container .p-editor-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options {
   background: #ffffff;
@@ -981,25 +981,25 @@ p-dropdown.ng-dirty.ng-invalid > .p-dropdown {
   margin-bottom: 10px;
 }
 .p-editor-container .p-editor-content.ql-snow {
-  border: 1px solid #e0e0e0;
+  border: 1px solid var(--deepPurple500);
 }
 .p-editor-container .p-editor-content .ql-editor {
-  background: #ffffff;
-  color: rgba(0, 0, 0, 0.87);
+  background: var(--darkgrey);
+  color: rgba(255, 255, 255, 0.87);
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 .p-editor-container .ql-snow.ql-toolbar button:hover,
 .p-editor-container .ql-snow.ql-toolbar button:focus {
-  color: rgba(0, 0, 0, 0.87);
+  color: rgba(255, 255, 255, 0.87);
 }
 .p-editor-container .ql-snow.ql-toolbar button:hover .ql-stroke,
 .p-editor-container .ql-snow.ql-toolbar button:focus .ql-stroke {
-  stroke: rgba(0, 0, 0, 0.87);
+  stroke: rgba(255, 255, 255, 0.87);
 }
 .p-editor-container .ql-snow.ql-toolbar button:hover .ql-fill,
 .p-editor-container .ql-snow.ql-toolbar button:focus .ql-fill {
-  fill: rgba(0, 0, 0, 0.87);
+  fill: rgba(255, 255, 255, 0.87);
 }
 .p-editor-container .ql-snow.ql-toolbar button.ql-active,
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-label.ql-active,
@@ -1010,16 +1010,19 @@ p-dropdown.ng-dirty.ng-invalid > .p-dropdown {
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-stroke,
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-stroke {
   color: var(--deepPurpleA100);
+  stroke: var(--deepPurpleA100);
 }
 .p-editor-container .ql-snow.ql-toolbar button.ql-active .ql-fill,
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-fill,
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-fill {
   color: var(--deepPurpleA100);
+  stroke: var(--deepPurpleA100);
 }
 .p-editor-container .ql-snow.ql-toolbar button.ql-active .ql-picker-label,
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-label.ql-active .ql-picker-label,
 .p-editor-container .ql-snow.ql-toolbar .ql-picker-item.ql-selected .ql-picker-label {
   color: var(--deepPurpleA100);
+  stroke: var(--deepPurpleA100);
 }
 
 .p-inputgroup-addon {
