feat: translated Assessment

--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
@@ -12,9 +12,9 @@
       </p-scrollPanel>
     </div>
     <div class="assessment-button-container">
-      <app-assessment-button class="assessment-button" [assessment]="'BAD'" (click)="assessIndexCard('BAD')"></app-assessment-button >
-      <app-assessment-button class="assessment-button"  [assessment]="'OK'" (click)="assessIndexCard('OK')"></app-assessment-button >
-      <app-assessment-button class="assessment-button"  [assessment]="'GOOD'" (click)="assessIndexCard('GOOD')"></app-assessment-button >
+      <app-assessment-button class="assessment-button" [assessment]="'bad'" (click)="assessIndexCard('BAD')"></app-assessment-button >
+      <app-assessment-button class="assessment-button"  [assessment]="'ok'" (click)="assessIndexCard('OK')"></app-assessment-button >
+      <app-assessment-button class="assessment-button"  [assessment]="'good'" (click)="assessIndexCard('GOOD')"></app-assessment-button >
     </div>
   </div>
 </div>
