--- a/indexcards-ui/src/app/component/indexcard/assessment-button/assessment-button.component.html
+++ b/indexcards-ui/src/app/component/indexcard/assessment-button/assessment-button.component.html
@@ -1,3 +1,3 @@
-<div class="assessment-button {{ assessment | lowercase }}">
-  {{ assessment }}
+<div class="assessment-button {{ assessment }}">
+  {{ assessment | translate }}
 </div>
