--- a/indexcards-ui/src/app/component/projects/project/project.component.css
+++ b/indexcards-ui/src/app/component/projects/project/project.component.css
@@ -27,9 +27,11 @@
   border-radius: 10px;
   overflow: hidden;
   display: -webkit-box;
+  text-overflow: ellipsis;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   text-align: left;
+  overflow-wrap: break-word;
 }
 
 .header-icon {
@@ -55,4 +57,29 @@
 
 .good {
   border: 2px solid var(--good);
+}
+
+.icon {
+  margin-right: 10px;
+  font-size: 1.5em;
+  transition: filter 0.25s;
+  float: right;
+  margin-top: 10px;
+}
+
+.icon:hover {
+  filter: brightness(80%);
+}
+
+.text {
+  font-size: 1.5em;
+  margin-top: 10px;
+}
+
+p {
+  margin: 0;
+}
+
+ol {
+  margin: 0;
 }
