--- a/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
+++ b/indexcards-ui/src/app/component/indexcard/indexcard-quiz/indexcard-quiz.component.html
@@ -1,13 +1,13 @@
 <div style="height: 60vh" class="container">
   <div class="indexcard-container">
     <div class="indexcard">
-      <p-scrollPanel [style]="{width: '100%', height: '40%'}">
+      <p-scrollPanel [style]="{width: '100%', height: '40%', padding: '10px'}">
         <div class="indexcard-text" [innerHTML]="getIndexCard()?.question" ></div>
       </p-scrollPanel>
       <p-button (click)="showAnswer = !showAnswer">
         {{ showAnswer ? ('indexcard.hide_answer' | translate) : 'indexcard.show_answer' | translate }}
       </p-button>
-      <p-scrollPanel *ngIf="showAnswer" [style]="{width: '100%', height: '40%'}">
+      <p-scrollPanel *ngIf="showAnswer" [style]="{width: '100%', height: '40%', padding: '10px'}">
         <div class="indexcard-text" [innerHTML]="getIndexCard()?.answer" ></div>
       </p-scrollPanel>
     </div>
