--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -16,7 +16,9 @@
   <div class="indexcard-container">
     <div class="indexcard {{ indexcard.assessment.toString() | lowercase }}" *ngFor="let indexcard of userProject?.projectResponse?.indexCardResponses">
       <i class="pi pi-trash trash icon" (click)="deleteIndexCard(indexcard.indexCardId)"></i>
-      <div class="text" [innerHTML]="indexcard.question" ></div>
+      <p-scrollPanel [style]="{width: '100%', height: '20vh'}">
+        <div class="text" [innerHTML]="indexcard.question"></div>
+      </p-scrollPanel>
     </div>
   </div>
 </div>
