--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -15,7 +15,10 @@
   </div>
   <div class="indexcard-container">
     <div class="indexcard {{ indexcard.assessment.toString() | lowercase }}" *ngFor="let indexcard of userProject?.projectResponse?.indexCardResponses">
-      <i class="pi pi-trash trash icon" (click)="deleteIndexCard(indexcard.indexCardId)"></i>
+      <p-toast></p-toast>
+      <p-confirmPopup></p-confirmPopup>
+      <i class="pi pi-trash trash icon" (click)="confirm($event, indexcard.indexCardId)"></i>
+      <i class="pi pi-pencil icon edit" (click)="editProject(indexcard.indexCardId)"></i>
       <p-scrollPanel [style]="{width: '100%', height: '20vh'}">
         <div class="text ql-editor" [innerHTML]="indexcard.question"></div>
       </p-scrollPanel>
