feat: created html for edit index card

--- a/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
+++ b/indexcards-ui/src/app/component/indexcard/create-indexcard/create-indexcard.component.html
@@ -16,6 +16,7 @@
             <button type="button" class="ql-underline" aria-label="Underline"></button>
             <button type="button" class="ql-list" value="ordered" aria-label="Ordered List"></button>
             <button type="button" class="ql-list" value="bullet" aria-label="Unordered List"></button>
+            <button type="button" class="ql-image" aria-label="Insert Image"></button>
           </span>
         </ng-template>
       </p-editor>
@@ -33,6 +34,7 @@
             <button type="button" class="ql-underline" aria-label="Underline"></button>
             <button type="button" class="ql-list" value="ordered" aria-label="Ordered List"></button>
             <button type="button" class="ql-list" value="bullet" aria-label="Unordered List"></button>
+            <button type="button" class="ql-image" aria-label="Insert Image"></button>
           </span>
         </ng-template>
       </p-editor>
