--- a/indexcards-ui/src/app/component/indexcard/edit-indexcard/edit-indexcard.component.html
+++ b/indexcards-ui/src/app/component/indexcard/edit-indexcard/edit-indexcard.component.html
@@ -1,1 +1,45 @@
-<p>edit-indexcard works!</p>
+<form [formGroup]="editIndexCardFormGroup" (ngSubmit)="editIndexCard()">
+  <div class="container">
+    <h1 class="title">
+      {{ 'indexcard.edit' | translate }}
+    </h1>
+
+    <div class="form-input form-group">
+      <label for="question">
+        {{ 'indexcard.question' | translate }}
+      </label><br>
+      <p-editor formControlName="question" name="question" id="question" [style]="{'height':'160px'}">
+        <ng-template pTemplate="header">
+          <span class="ql-format-group">
+            <button type="button" class="ql-bold" aria-label="Bold"></button>
+            <button type="button" class="ql-italic" aria-label="Italic"></button>
+            <button type="button" class="ql-underline" aria-label="Underline"></button>
+            <button type="button" class="ql-list" value="ordered" aria-label="Ordered List"></button>
+            <button type="button" class="ql-list" value="bullet" aria-label="Unordered List"></button>
+            <button type="button" class="ql-image" aria-label="Insert Image"></button>
+          </span>
+        </ng-template>
+      </p-editor>
+    </div>
+
+    <div class="form-input form-group">
+      <label for="answer">
+        {{ 'indexcard.answer' | translate }}
+      </label><br>
+      <p-editor formControlName="answer" name="answer" id="answer" [style]="{'height':'160px'}">
+        <ng-template pTemplate="header">
+          <span class="ql-format-group">
+            <button type="button" class="ql-bold" aria-label="Bold"></button>
+            <button type="button" class="ql-italic" aria-label="Italic"></button>
+            <button type="button" class="ql-underline" aria-label="Underline"></button>
+            <button type="button" class="ql-list" value="ordered" aria-label="Ordered List"></button>
+            <button type="button" class="ql-list" value="bullet" aria-label="Unordered List"></button>
+            <button type="button" class="ql-image" aria-label="Insert Image"></button>
+          </span>
+        </ng-template>
+      </p-editor>
+    </div>
+
+    <button pButton type="submit">{{ 'indexcard.edit' | translate }}</button>
+  </div>
+</form>
