--- a/indexcards-ui/src/app/component/projects/edit-project/edit-project.component.html
+++ b/indexcards-ui/src/app/component/projects/edit-project/edit-project.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="editProjectFormGroup" (ngSubmit)="editProject()">
   <div class="container">
     <h1 class="title">
-      {{ 'project.edit' | translate }} {{ userProject?.projectResponse?.name }}
+      {{ 'project.edit' | translate }} {{ userProject?.name }}
     </h1>
     <div class="form-input form-group">
       <label for="name">
