--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="header-container">
     <h1 class="title">
-      {{ userProject?.projectResponse?.name }}
+      {{ userProject?.name }}
     </h1>
     <div class="header-icon-container">
       <p-button
@@ -10,11 +10,13 @@
       >
         {{ 'indexcard.spaced_repetition' | translate }}
       </p-button>
-      <i class="pi pi-plus header-icon" pTooltip="{{ 'indexcard.create_tooltip' | translate }}" (click)="onClickCreateIndexcardButton()"></i>
+      <i class="pi pi-plus header-icon" pTooltip="{{ 'indexcard.create_tooltip' | translate }}"
+         (click)="onClickCreateIndexcardButton()"></i>
     </div>
   </div>
   <div class="indexcard-container">
-    <div class="indexcard {{ indexcard.assessment.toString() | lowercase }}" *ngFor="let indexcard of userProject?.projectResponse?.indexCardResponses">
+    <div class="indexcard {{ indexcard.assessment.toString() | lowercase }}"
+         *ngFor="let indexcard of userProject?.indexCardResponses">
       <i class="pi pi-trash trash icon" (click)="deleteIndexCard(indexcard.indexCardId)"></i>
       <p-scrollPanel [style]="{width: '100%', height: '20vh'}">
         <div class="text ql-editor" [innerHTML]="indexcard.question"></div>
